# SpeakUp

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  Requirements.md  SpeakUp.spec  SpeakUp.vbs  TESTING.md  USER_GUIDE.md  backlog.html  config_defaults.json  create_shortcut.vbs  pyproject.toml  release.ps1  user_guide.html
scripts/: build.py  make_icon.py  notion_sync.py
src/: config.py  main.py  version.py
src/context/: active_window.py  selection.py  vscode_context.py
src/hotkeys/: listener.py
src/output/: inserter.py
src/rewrite/: engine.py  modes.py  prompts.py
src/services/: autostart.py  dns_resilience.py  error_handler.py  pipeline.py  usage_tracker.py  vocab_learner.py
src/transcription/: deepgram_client.py  factory.py  local_whisper_client.py  realtime_client.py  whisper_client.py
src/ui/: app.py  overlay.py
src/ui/components/: about_dialog.py  caption_window.py  onboarding_dialog.py  preview_window.py  settings_dialog.py
tests/: test_config.py  test_error_handler.py  test_new_features.py  test_pipeline.py
